[package]
name = "fs-watch-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["experimental-threads"] }
notify = { version = "6.1.1", features = ["serde"] }
serde = "1.0.197"
serde_json = "1.0.115"

